[package]
name = "permfs"
version = "0.1.0"
edition = "2021"
description = "Permutation-addressed Distributed Filesystem Protocol"
license = "MIT OR Apache-2.0"
authors = ["PermFS Contributors"]
repository = "https://github.com/permfs/permfs"
keywords = ["filesystem", "distributed", "no_std", "fuse"]
categories = ["filesystem", "no-std"]

[lib]
crate-type = ["staticlib", "rlib"]
path = "lib.rs"

[features]
default = ["std"]
std = ["bitflags/std", "alloc", "log/std"]
alloc = []
kernel = ["alloc"]
os_porting = ["alloc"]
fuse = ["std", "dep:fuser", "dep:nix", "dep:ctrlc"]
network = ["std", "dep:socket2", "dep:parking_lot"]
block-discard = ["std"]
insecure-transport = ["network"]
compression = ["std", "dep:lz4_flex"]

[dependencies]
bitflags = { version = "2.4", default-features = false }
log = { version = "0.4", optional = true }
hmac = "0.12"
rand = "0.8"
sha2 = "0.10"

# Optional std dependencies
# abi-7-23 required for RENAME2 on macFUSE (fuser#341)
fuser = { version = "0.16", optional = true, features = ["libfuse", "abi-7-23"] }
nix = { version = "0.27", optional = true, features = ["signal", "mount"] }
ctrlc = { version = "3.4", optional = true }
socket2 = { version = "0.5", optional = true, features = ["all"] }
parking_lot = { version = "0.12", optional = true }
lz4_flex = { version = "0.11", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "test_fs"
required-features = ["std"]
path = "test_fs.rs"

[[example]]
name = "fuse_mount"
required-features = ["fuse"]
path = "fuse_mount.rs"

[[example]]
name = "cluster_node"
required-features = ["network"]
path = "cluster_node.rs"
